--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0"
   }
