--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mega-feature-requests",
+  "name": "magna-feature-requests",
   "version": "0.1.0",
   "private": true,
   "scripts": {
